- client: 2152 Do not show dashboard buttons on mobile screen, fix buttons on DNS block/allow lists pages

--- a/client/src/components/App/index.css
+++ b/client/src/components/App/index.css
@@ -71,9 +71,3 @@ body {
 .button-action--active {
     visibility: visible;
 }
-
-@media (max-width: 500px) {
-    .dashboard .button-action {
-        visibility: visible;
-    }
-}
